--- a/force-app/main/default/layouts/Account-Account Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Account-Account Layout.layout-meta.xml
@@ -155,8 +155,8 @@
         <layoutColumns/>
         <style>CustomLinks</style>
     </layoutSections>
-  <!--  <quickActionList>
-        <quickActionListItems>
+    <quickActionList>
+      <!--  <quickActionListItems>
             <quickActionName>FeedItem.TextPost</quickActionName>
         </quickActionListItems>
         <quickActionListItems>
